correction mobile screenss

--- a/assest/style/style.css
+++ b/assest/style/style.css
@@ -89,7 +89,7 @@ form {
 .form-contact {
   flex-direction: column;
   justify-content: center;
-  padding: 7.8%;
+  padding: 7%;
   margin-top: 0%;
   margin-bottom: 0%;
 }
@@ -412,6 +412,100 @@ svg.bi,
   }
 }
 
+@media only screen and (max-width: 414px) and (min-width: 414px) {
+  div > h1 {
+    display: none;
+  }
+
+  header {
+    height: 100px;
+  }
+
+  header > img {
+    width: 40%;
+    height: 55%;
+    position: relative;
+    z-index: 1;
+    margin-left: 28%;
+    margin-top: 1%;
+  }
+
+  ul.nav.nav-tabs {
+    font-size: 80%;
+    position: absolute;
+    z-index: 2;
+    opacity: 0.8;
+    margin-top: 15.5%;
+    margin-left: 4%;
+  }
+
+  a.nav-link {
+    padding: 5.5px;
+    margin-top: 4px;
+  }
+
+  .checkbox-container {
+    width: 95%;
+    flex-wrap: nowrap;
+  }
+
+  .seacher-bar {
+    justify-content: center;
+  }
+
+  label {
+    font-size: 13px;
+  }
+
+  input#inlineCheckbox1,
+  input#inlineCheckbox2,
+  input#inlineCheckbox3,
+  input#inlineCheckbox4,
+  input#inlineCheckbox5 {
+    width: 10px;
+    height: 10px;
+  }
+
+  form {
+    flex-direction: column;
+    width: 100%;
+    font-size: 11px;
+    margin-top: 2%;
+  }
+
+  .form-contact {
+    height: 627px;
+  }
+
+  input#searcher {
+    width: 60%;
+    border-color: #d90368;
+    font-size: 13px;
+    margin-left: 30%;
+    padding: 3.1%;
+  }
+
+  input.btn.btn-light {
+    position: absolute;
+    padding: 2px;
+    margin-left: 30%;
+    margin-top: 80%;
+  }
+
+  .button-searcher {
+    width: 65%;
+    margin-top: -0.2%;
+  }
+
+  .cards.cards-details {
+    padding-bottom: 48%;
+  }
+
+  table {
+    padding-bottom: 37%;
+  }
+}
+
 @media only screen and (max-width: 390px) and (min-width: 390px) {
   div > h1 {
     display: none;
@@ -493,7 +587,6 @@ svg.bi,
   }
 
   .button-searcher {
-    /* width: 90%; */
     width: 65%;
     margin-top: -0.2%;
   }
@@ -509,7 +602,6 @@ svg.bi,
   main {
     margin-top: -2%;
   }
-
 }
 
 @media only screen and (max-width: 820px) and (min-width: 820px) {
@@ -521,8 +613,7 @@ svg.bi,
     width: 20%;
     height: 78%;
     margin-left: 2%;
-   
-}
+  }
 
   div > h1 {
     padding: 1.5%;
